--- a/angular-hackernews-app/src/app/like/like.component.html
+++ b/angular-hackernews-app/src/app/like/like.component.html
@@ -1,1 +1,1 @@
-{{like}} likes. <button (click)="likeThis()">Like</button>
+{{like}} likes. <button  class="btn-dark btn" (click)="likeThis()">Like</button>
