--- a/furama/src/app/app.component.html
+++ b/furama/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <app-nagivation></app-nagivation>
-<app-facilities></app-facilities>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
