--- a/furama/src/app/facilities/facilities.component.html
+++ b/furama/src/app/facilities/facilities.component.html
@@ -1,138 +1,13 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
 <a href="#home">
   <button type="button" class="btn btn-outline-primary btn-ho"><i
     class="fa-solid fa-arrow-up"></i></button>
 </a>
 <div class="list" id="home">
-  <div class=" card item">
-    <div class="btn-hi">
-      <a href="addAndUpFacilities.html">
-        <button type="button" class="btn btn-success">Edit</button>
-      </a>
-      <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Delete
-      </button>
-    </div>
-    <img src="../../assets/image/home.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-         style="border-radius: 5px">
-    <div class="card-body">
-      <h5 class="card-title "> Ocean suite</h5>
-      <p class="card-text ">Room size: 400m<sup>2</sup></p>
-      <a style="float: right" href="#"> <img
-        src="https://img.icons8.com/material-outlined/20/null/info--v1.png"/>Know more</a>
-    </div>
-  </div>
-  <div class=" card item">
-    <div class="btn-hi">
-      <a href="addAndUpFacilities.html">
-        <button type="button" class="btn btn-success">Edit</button>
-      </a>
-      <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Delete
-      </button>
-    </div>
-    <img src="../../assets/image/home.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-         style="border-radius: 5px">
-    <div class="card-body">
-      <h5 class="card-title "> Ocean suite</h5>
-      <p class="card-text ">Room size: 400m<sup>2</sup></p>
-      <a style="float: right" href="#"> <img
-        src="https://img.icons8.com/material-outlined/20/null/info--v1.png"/>Know more</a>
-    </div>
-  </div>
-  <div class=" card item">
-    <div class="btn-hi">
-      <a href="addAndUpFacilities.html">
-        <button type="button" class="btn btn-success">Edit</button>
-      </a>
-      <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Delete
-      </button>
-    </div>
-    <img src="../../assets/image/home.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-         style="border-radius: 5px">
-    <div class="card-body">
-      <h5 class="card-title "> Ocean suite</h5>
-      <p class="card-text ">Room size: 400m<sup>2</sup></p>
-      <a style="float: right" href="#"> <img
-        src="https://img.icons8.com/material-outlined/20/null/info--v1.png"/>Know more</a>
-    </div>
-  </div>
-  <div class=" card item">
-    <div class="btn-hi">
-      <a href="addAndUpFacilities.html">
-        <button type="button" class="btn btn-success">Edit</button>
-      </a>
-      <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Delete
-      </button>
-    </div>
-    <img src="../../assets/image/home.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-         style="border-radius: 5px">
-    <div class="card-body">
-      <h5 class="card-title "> Ocean suite</h5>
-      <p class="card-text ">Room size: 400m<sup>2</sup></p>
-      <a style="float: right" href="#"> <img
-        src="https://img.icons8.com/material-outlined/20/null/info--v1.png"/>Know more</a>
-    </div>
-  </div>
-  <div class=" card item">
-    <div class="btn-hi">
-      <a href="addAndUpFacilities.html">
-        <button type="button" class="btn btn-success">Edit</button>
-      </a>
-      <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Delete
-      </button>
-    </div>
-    <img src="../../assets/image/home.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-         style="border-radius: 5px">
-    <div class="card-body">
-      <h5 class="card-title "> Ocean suite</h5>
-      <p class="card-text ">Room size: 400m<sup>2</sup></p>
-      <a style="float: right" href="#"> <img
-        src="https://img.icons8.com/material-outlined/20/null/info--v1.png"/>Know more</a>
-    </div>
-  </div>
-  <div class=" card item">
-    <div class="btn-hi">
-      <a href="addAndUpFacilities.html">
-        <button type="button" class="btn btn-success">Edit</button>
-      </a>
-      <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Delete
-      </button>
-    </div>
-    <img src="../../assets/image/home.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-         style="border-radius: 5px">
-    <div class="card-body">
-      <h5 class="card-title "> Ocean suite</h5>
-      <p class="card-text ">Room size: 400m<sup>2</sup></p>
-      <a style="float: right" href="#"> <img
-        src="https://img.icons8.com/material-outlined/20/null/info--v1.png"/>Know more</a>
-    </div>
-  </div>
-  <div class=" card item">
-    <div class="btn-hi">
-      <a href="addAndUpFacilities.html">
-        <button type="button" class="btn btn-success">Edit</button>
-      </a>
-      <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Delete
-      </button>
-    </div>
-    <img src="../../assets/image/home.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-         style="border-radius: 5px">
-    <div class="card-body">
-      <h5 class="card-title "> Ocean suite</h5>
-      <p class="card-text ">Room size: 400m<sup>2</sup></p>
-      <a style="float: right" href="#"> <img
-        src="https://img.icons8.com/material-outlined/20/null/info--v1.png"/>Know more</a>
-    </div>
-  </div>
-  <div class=" card item">
-    <div class="btn-hi">
-      <a href="addAndUpFacilities.html">
+  <div class=" card item" *ngFor="let i of list">
+    <div class="btn-hi" >
+      <a href="addAndUpFacilities.html" routerLink="upFacilities">
         <button type="button" class="btn btn-success">Edit</button>
       </a>
       <button type="button" class="btn btn-danger" data-bs-toggle="modal"
@@ -168,3 +43,4 @@
     </div>
   </div>
 </div>
+
