--- a/AllPractice/src/app/app.component.html
+++ b/AllPractice/src/app/app.component.html
@@ -1,3 +1,4 @@
-
-<a routerLink="/youtube">Youtube</a>
+<a routerLink="/youtube">Youtube<br></a>
+<router-outlet></router-outlet>
+<a routerLink="/timelines">Ứng dụng tính thời gian sống</a>
 <router-outlet></router-outlet>
