--- a/furama/src/app/facilities/facilities.component.html
+++ b/furama/src/app/facilities/facilities.component.html
@@ -4,7 +4,9 @@
   <button type="button" class="btn btn-outline-primary btn-ho"><i
     class="fa-solid fa-arrow-up"></i></button>
 </a>
+<a routerLink="/createFacilities" class="b"><button type="button" class="btn btn-primary">Add Facilities</button></a>
 <div class="list" id="home">
+
   <div class=" card item" *ngFor="let i of list">
     <div class="btn-hi" >
       <a href="addAndUpFacilities.html" routerLink="upFacilities">
