--- a/furama/src/app/nagivation/nagivation.component.html
+++ b/furama/src/app/nagivation/nagivation.component.html
@@ -2,6 +2,6 @@
   <a class="nav-link ex" aria-current="page" routerLink="">Home</a>
   <a class="nav-link ex" href="#">Employee</a>
   <a class="nav-link ex" routerLink="/listCustomer">Customer</a>
-  <a class="nav-link ex" href="#">Service</a>
-  <a class="nav-link ex" href="#">Contract</a>
+  <a class="nav-link ex" routerLink="/listFacilities">Service</a>
+  <a class="nav-link ex" routerLink="/listContract">Contract</a>
 </nav>
