--- a/furama/src/app/create-facilities/create-facilities.component.html
+++ b/furama/src/app/create-facilities/create-facilities.component.html
@@ -73,7 +73,7 @@
                   <div class="mb-3 ">
                     <label class="form-label">Standard Room</label>
                     <input type="text" class="form-control"
-                           placeholder="Enter your phone Standard Room">
+                           placeholder="Enter your Standard Room">
                   </div>
                 </td>
                 <td>
@@ -143,7 +143,7 @@
                 <td>
                   <div class="mb-3">
                     <label class="form-label">Rent Type</label>
-                    <select class="form-select" th:field="*{rentType}">
+                    <select class="form-select" >
                       <option>...</option>
                     </select>
                   </div>
@@ -177,7 +177,7 @@
                   <div class="mb-3 ">
                     <label class="form-label">Standard Room</label>
                     <input type="text" class="form-control"
-                           placeholder="Enter your phone Standard Room">
+                           placeholder="Enter your Standard Room">
 
                   </div>
                 </td>
