--- a/furama/src/app/facilities/facilities.component.html
+++ b/furama/src/app/facilities/facilities.component.html
@@ -7,20 +7,20 @@
 <a routerLink="/createFacilities" class="b"><button type="button" class="btn btn-primary">Add Facilities</button></a>
 <div class="list" id="home">
 
-  <div class=" card item" *ngFor="let i of list">
+  <div class=" card item" *ngFor="let facility of facilitys">
     <div class="btn-hi" >
-      <a href="addAndUpFacilities.html" routerLink="upFacilities">
+      <a  routerLink="upFacilities">
         <button type="button" class="btn btn-success">Edit</button>
       </a>
       <button type="button" class="btn btn-danger" data-bs-toggle="modal"
               data-bs-target="#exampleModal">Delete
       </button>
     </div>
-    <img src="../../assets/image/home.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+    <img src="{{facility.image}}" class="card-img-top" alt="..." width="288px" height="200px"
          style="border-radius: 5px">
     <div class="card-body">
-      <h5 class="card-title "> Ocean suite</h5>
-      <p class="card-text ">Room size: 400m<sup>2</sup></p>
+      <h5 class="card-title ">{{facility.name}}</h5>
+      <p class="card-text ">Room size: {{facility.area}}m<sup>2</sup></p>
       <a style="float: right" href="#"> <img
         src="https://img.icons8.com/material-outlined/20/null/info--v1.png"/>Know more</a>
     </div>
