--- a/furama/src/app/facilities/facilities.component.html
+++ b/furama/src/app/facilities/facilities.component.html
@@ -9,7 +9,7 @@
 
   <div class=" card item" *ngFor="let facility of facilitys">
     <div class="btn-hi" >
-      <a  routerLink="upFacilities">
+      <a  routerLink="/upFacilities">
         <button type="button" class="btn btn-success">Edit</button>
       </a>
       <button type="button" class="btn btn-danger" data-bs-toggle="modal"
