--- a/furama/src/app/customers/customers.component.html
+++ b/furama/src/app/customers/customers.component.html
@@ -8,7 +8,7 @@
      style="float: right;margin-right: 20px;margin-bottom: 10px" routerLink="/createCustomer">Add New</a>
   <table class="table table-striped">
     <tr>
-      <th>Id</th>
+      <th>No</th>
       <th>Name</th>
       <th>Customer Type</th>
       <th>Date Of Birth</th>
@@ -19,75 +19,52 @@
       <th>Address</th>
       <th>Action</th>
     </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+    <tr *ngFor="let customer of customers,let i=index">
+      <td>{{i + 1}}</td>
+      <td>{{customer.name}}</td>
+      <td>{{customer.type}}</td>
+      <td>{{customer.dateOfBirth}}</td>
+      <td>{{customer.gender}}</td>
+      <td>{{customer.idCard}}</td>
+      <td>{{customer.phone}}</td>
+      <td>{{customer.email}}</td>
+      <td>{{customer.address}}</td>
       <td>
-      </td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>
-        <button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#DetailModal"
-                id="detail" onclick="detailCus(this.value)">Detail
-        </button>
         <a class="btn btn-outline-success btn-sm" role="button"
            aria-disabled="true" routerLink="/updateCustomer">Edit</a>
-        <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                id="btn_del" onclick="deleteCus(this.value)">Delete
+        <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+                id="btn_del">Delete
         </button>
+<!-- Modal Delete-->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Customer</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <b>Are you sure you want to delete {{customer.name}}?</b>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="del"
+                        (click)="deleteById(customer.id)">Delete
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </td>
     </tr>
   </table>
   <!--    phan trang-->
-    <div style="margin-top: 50px">
-      <a class="btn btn-primary btn-sm" role="button" aria-disabled="true">Previous</a>
-      <span>
+  <div style="margin-top: 50px">
+    <a class="btn btn-primary btn-sm" role="button" aria-disabled="true">Previous</a>
+    <span>
         <a class="btn btn-primary btn-sm" role="button" aria-disabled="true">1</a>
       </span>
-      <a class="btn btn-primary btn-sm" role="button" aria-disabled="true">Next</a>
-    </div>
-</div>
-
-<!-- Modal Delete-->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Customer</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <b id="result"></b>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="del" onclick="del(this.value)">
-          Delete
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal Detail-->
-<div class="modal fade" id="DetailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="DetailModalLabel">Customer</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <table id="resultDetail">
-        </table>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
-    </div>
+    <a class="btn btn-primary btn-sm" role="button" aria-disabled="true">Next</a>
   </div>
 </div>
