--- a/furama/src/app/contracts/contracts.component.html
+++ b/furama/src/app/contracts/contracts.component.html
@@ -1,7 +1,7 @@
 <div class="content">
   <p style="font-size: larger;"><b>List Contract</b></p>
-  <a class="btn btn-primary" role="button" aria-disabled="true"
-     style="float: right;margin-right: 20px;margin-bottom: 10px" routerLink="/createContract" >Add New</a>
+  <button class="btn btn-primary" role="button" aria-disabled="true"
+     style="float: right;margin-right: 20px;margin-bottom: 10px" routerLink="/createContract" >Add New</button>
   <table class="table table-striped">
     <tr>
       <th>No</th>
