--- a/furama/src/app/update-customer/update-customer.component.html
+++ b/furama/src/app/update-customer/update-customer.component.html
@@ -1,78 +1,78 @@
 <div class="content">
   <form >
     <fieldset>
-      <legend>Update Customer</legend>
-        <table width=70%>
-          <tr>
-            <td>
-              <div class="mb-3 ">
-                <label class="form-label">Name</label>
-                <input  type="text" class="form-control" placeholder="Enter your name">
-              </div>
-            </td>
-            <td>
-              <div class="mb-3">
-                <label class="form-label">Customer Type</label>
-                <select class="form-select" >
-                  <option >...</option>
-                </select>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="mb-3 ">
-                <label class="form-label">Date Of Birth</label>
-                <input  type="date" class="form-control">
-              </div>
-            </td>
-            <td>
-              <div class="mb-3 ">
-                <label class="form-label">Gender</label>
-                <select class="form-select"  >
-                  <option value=1 >Nam</option>
-                  <option value=0 >Nữ</option>
-                </select>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="mb-3 ">
-                <label class="form-label">Id Card</label>
-                <input  type="text" class="form-control" placeholder="Enteryour id card">
-              </div>
-            </td>
-            <td>
-              <div class="mb-3 ">
-                <label class="form-label">Phone Number</label>
-                <input  type="text" class="form-control" placeholder="Enter your phone number">
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="mb-3 ">
-                <label class="form-label">Email</label>
-                <input  type="text" class="form-control" placeholder="Enter your email">
-              </div>
-            </td>
-            <td>
-              <div class="mb-3 ">
-                <label class="form-label">Address</label>
-                <input  type="text" class="form-control" placeholder="Enter your address">
-              </div>
-            </td>
-          </tr>
-          <tr >
-            <td></td>
-            <td >
-              <input type="submit" class="btn btn-primary" role="button"
-                     aria-disabled="true" style="float: right" value="Update"/>
-              <input type="button" class="btn btn-primary" style="float: right;margin-right: 10px;" onclick="history.back()" value="Back"/>
-            </td>
-          </tr>
-        </table>
+      <legend>New Customer</legend>
+      <table width=70%>
+        <tr>
+          <td>
+            <div class="mb-3 ">
+              <label class="form-label">Name</label>
+              <input  type="text" class="form-control"  placeholder="Enter your name">
+            </div>
+          </td>
+          <td>
+            <div class="mb-3">
+              <label class="form-label">Customer Type</label>
+              <select class="form-select" >
+                <option ></option>
+              </select>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="mb-3 ">
+              <label class="form-label" >Date Of Birth</label>
+              <input  type="date" class="form-control" >
+            </div>
+          </td>
+          <td>
+            <div class="mb-3 ">
+              <label class="form-label" >Gender</label>
+              <select class="form-select"  >
+                <option value='Nam' >Nam</option>
+                <option value='Nữ' >Nữ</option>
+              </select>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="mb-3 ">
+              <label class="form-label">Id Card</label>
+              <input  type="text" class="form-control" placeholder="Enteryour id card" >
+            </div>
+          </td>
+          <td>
+            <div class="mb-3 ">
+              <label class="form-label">Phone Number</label>
+              <input  type="text" class="form-control" placeholder="Enter your phone number" >
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="mb-3 ">
+              <label class="form-label">Email</label>
+              <input  type="text" class="form-control" placeholder="Enter your email" >
+            </div>
+          </td>
+          <td>
+            <div class="mb-3 ">
+              <label class="form-label">Address</label>
+              <input  type="text" class="form-control" placeholder="Enter your address" >
+            </div>
+          </td>
+        </tr>
+        <tr >
+          <td></td>
+          <td >
+            <button type="submit" class="btn btn-primary"
+                    aria-disabled="true" style="float: right" >Add</button>
+            <input type="button" class="btn btn-primary" style="float: right;margin-right: 10px;" onclick="history.back()" value="Back"/>
+          </td>
+        </tr>
+      </table>
     </fieldset>
   </form>
 </div>
