--- a/furama/src/app/create-customer/create-customer.component.html
+++ b/furama/src/app/create-customer/create-customer.component.html
@@ -1,20 +1,19 @@
 <div class="content">
-  <form >
-    <fieldset>
+  <form [formGroup] ="newForm" (ngSubmit)="submit(newForm)">
       <legend>New Customer</legend>
         <table width=70%>
           <tr>
             <td>
               <div class="mb-3 ">
                 <label class="form-label">Name</label>
-                <input  type="text" class="form-control" placeholder="Enter your name">
+                <input  type="text" class="form-control" formControlName="name" placeholder="Enter your name">
               </div>
             </td>
             <td>
               <div class="mb-3">
                 <label class="form-label">Customer Type</label>
-                <select class="form-select" >
-                  <option >...</option>
+                <select class="form-select" formControlName="type">
+                  <option *ngFor="let type of types" [value]="type" [text]="type"></option>
                 </select>
               </div>
             </td>
@@ -22,16 +21,16 @@
           <tr>
             <td>
               <div class="mb-3 ">
-                <label class="form-label">Date Of Birth</label>
-                <input  type="date" class="form-control">
+                <label class="form-label" >Date Of Birth</label>
+                <input  type="date" class="form-control" formControlName="dateOfBirth">
               </div>
             </td>
             <td>
               <div class="mb-3 ">
-                <label class="form-label">Gender</label>
-                <select class="form-select"  >
-                  <option value=1 >Nam</option>
-                  <option value=0 >Nữ</option>
+                <label class="form-label" >Gender</label>
+                <select class="form-select"  formControlName="gender">
+                  <option value='Nam' >Nam</option>
+                  <option value='Nữ' >Nữ</option>
                 </select>
               </div>
             </td>
@@ -40,13 +39,13 @@
             <td>
               <div class="mb-3 ">
                 <label class="form-label">Id Card</label>
-                <input  type="text" class="form-control" placeholder="Enteryour id card">
+                <input  type="text" class="form-control" placeholder="Enteryour id card" formControlName="idCard">
               </div>
             </td>
             <td>
               <div class="mb-3 ">
                 <label class="form-label">Phone Number</label>
-                <input  type="text" class="form-control" placeholder="Enter your phone number">
+                <input  type="text" class="form-control" placeholder="Enter your phone number" formControlName="phone">
               </div>
             </td>
           </tr>
@@ -54,25 +53,24 @@
             <td>
               <div class="mb-3 ">
                 <label class="form-label">Email</label>
-                <input  type="text" class="form-control" placeholder="Enter your email">
+                <input  type="text" class="form-control" placeholder="Enter your email" formControlName="email">
               </div>
             </td>
             <td>
               <div class="mb-3 ">
                 <label class="form-label">Address</label>
-                <input  type="text" class="form-control" placeholder="Enter your address">
+                <input  type="text" class="form-control" placeholder="Enter your address" formControlName="address">
               </div>
             </td>
           </tr>
           <tr >
             <td></td>
             <td >
-              <input type="submit" class="btn btn-primary" role="button"
-                     aria-disabled="true" style="float: right" value="Add"/>
+              <button type="submit" class="btn btn-primary"
+                      aria-disabled="true" style="float: right" >Add</button>
               <input type="button" class="btn btn-primary" style="float: right;margin-right: 10px;" onclick="history.back()" value="Back"/>
             </td>
           </tr>
         </table>
-    </fieldset>
   </form>
 </div>
