--- a/AllPractice/src/app/product-list/product-list.component.html
+++ b/AllPractice/src/app/product-list/product-list.component.html
@@ -6,6 +6,7 @@
     <td>Tên</td>
     <td>Giá</td>
     <td>Mô tả</td>
+    <td>Hãng</td>
     <th></th>
   </tr>
   </thead>
@@ -15,6 +16,7 @@
     <td>{{product.name}}</td>
     <td>{{product.price}}</td>
     <td>{{product.description}}</td>
+    <td>{{product.category}}</td>
     <td><button class="btn btn-sm btn-primary" [routerLink]="['/product/edit',product.id]" >Update</button>
     <button class="btn btn-sm btn-danger"  (click)="check(product.id,product.name)">Delete</button></td>
   </tr>
