--- a/AllPractice/src/app/product-update/product-update.component.html
+++ b/AllPractice/src/app/product-update/product-update.component.html
@@ -18,6 +18,14 @@
       <td><input type="text" formControlName="description"></td>
     </tr>
     <tr>
+      <td>Hãng</td>
+      <td>
+        <select formControlName="category">
+          <option *ngFor="let cate of categorys" [value]="cate">{{cate}}</option>
+        </select>
+      </td>
+    </tr>
+    <tr>
       <td></td>
       <td><button>Cập nhật</button></td>
     </tr>
