--- a/AllPractice/src/app/app.component.html
+++ b/AllPractice/src/app/app.component.html
@@ -1,3 +1,4 @@
 <a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>
 <router-outlet></router-outlet>
 <app-todo></app-todo>
+<app-image-gallery></app-image-gallery>
