--- a/AllPractice/src/app/app.component.html
+++ b/AllPractice/src/app/app.component.html
@@ -1,4 +1,7 @@
-<a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>
-<router-outlet></router-outlet>
+<app-nav-bar></app-nav-bar>
+<!--<a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>|<a routerLink="/category/list">Danh mục</a>|<a routerLink="/category/create">Tạo mới danh mục</a>-->
+<!--<router-outlet></router-outlet>-->
 <app-todo></app-todo>
 <app-image-gallery></app-image-gallery>
+
+
