--- a/AllPractice/src/app/product-list/product-list.component.html
+++ b/AllPractice/src/app/product-list/product-list.component.html
@@ -16,7 +16,7 @@
     <td>{{product.name}}</td>
     <td>{{product.price}}</td>
     <td>{{product.description}}</td>
-    <td>{{product.category}}</td>
+    <td>{{product.category.name}}</td>
     <td><button class="btn btn-sm btn-primary" [routerLink]="['/product/edit',product.id]" >Update</button>
     <button class="btn btn-sm btn-danger"  (click)="check(product.id,product.name)">Delete</button></td>
   </tr>
